--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,18 @@
 site_name: phpwallet
-theme: material
+theme: 
+  name: material
+  palette:
+    primary: 'indigo'
+    accent: 'indigo'
+  font:
+    text: 'Ubuntu'
+    code: 'Ubuntu Mono'
+  tabs: true
 
 nav:
-    - Installation Guide: index.md
+  - Installation: index.md
+  - Currencies: currency.md
+  - Deposit Methods: d_m.md
+  - Withdrawal Methods: w_m.md
+  - Currency Exchange Rates: e_r.md
+  - FAQ: faq.md
