--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 site_name: phpWallet Docs
-theme: 
-  name: material
+theme:
+  name: readthedocs
   palette:
-    primary: 'indigo'
-    accent: 'indigo'
+    primary: "indigo"
+    accent: "indigo"
   font:
-    text: 'Ubuntu'
-    code: 'Ubuntu Mono'
+    text: "Ubuntu"
+    code: "Ubuntu Mono"
   tabs: true
 
 nav:
